Removed unnecessary inline-block on <details> element that was preventing dropdown arrow from showing on Firefox

--- a/starwars/src/components/StarWars.scss
+++ b/starwars/src/components/StarWars.scss
@@ -2,7 +2,7 @@
 .character-container {
   width: 65%;
   max-width: 1000px;
-  margin: 0 auto 120px;
+  margin: 0 auto;
   padding: 20px;
   text-align: center;
   user-select: none;
@@ -16,18 +16,21 @@
   text-shadow: 0 0 4px #17bcda;
   
   .character-list {
+    opacity: 1;
+    transform: scale(1);
+    transition: all 0.2s ease;
 
     .character {
       width: 90%;
       margin: 30px auto;
 
       .name {
-        display: inline-block;
         font-size: 2.2rem;
         font-weight: bold;
         text-transform: uppercase;
         cursor: pointer;
         color: #4bd5ee;
+        line-height: 2.8rem;
         &:focus {
           outline: none;
           color: #e5b13a
@@ -70,4 +73,9 @@
       } // .info
     } // .character
   } // .character-list
+
+  .hidden {
+    opacity: 0;
+    transform: scale(1.015);
+  }
 } // .character-container
